data/derived/comb/progs/unify/prog0897.ml.out
Characters 75-76:
  if not c' then b' else wwhile f b';;
                                ^
Error: This expression has type 'a -> ('b -> 'c) * bool
       but an expression was expected of type ('a -> ('b -> 'c) * bool) * 'a
